增加注册登录，首页，页面tab，系统设置等功能和资源文件

--- a/weitaixin/src/main/res/layout/activity_device_list.xml
+++ b/weitaixin/src/main/res/layout/activity_device_list.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,10 +13,9 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/title_paired_devices"
@@ -27,16 +25,14 @@
         android:paddingLeft="5dp"
         android:text="配对的设备"
         android:textColor="#fff"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
     <ListView
         android:id="@+id/paired_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:stackFromBottom="true"
-        />
+        android:stackFromBottom="true" />
 
     <TextView
         android:id="@+id/title_new_devices"
@@ -46,21 +42,18 @@
         android:paddingLeft="5dp"
         android:text="其他设备"
         android:textColor="#fff"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
     <ListView
         android:id="@+id/new_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:stackFromBottom="true"
-        />
+        android:stackFromBottom="true" />
 
     <Button
         android:id="@+id/button_scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="扫描"
-        />
+        android:text="扫描" />
 </LinearLayout>
