--- a/weitaixin/src/main/res/values/dimens.xml
+++ b/weitaixin/src/main/res/values/dimens.xml
@@ -4,5 +4,27 @@
     <dimen name="activity_vertical_margin">20dp</dimen>
     <dimen name="title_height">40dp</dimen>
 
+    <!--Font Size-->
+
+    <dimen name="font14">14sp</dimen>
+    <dimen name="font16">16sp</dimen>
+    <dimen name="font18">18sp</dimen>
+    <dimen name="font20">20sp</dimen>
+    <dimen name="font22">22sp</dimen>
+    <dimen name="font24">24sp</dimen>
+    <dimen name="font26">26sp</dimen>
+    <dimen name="font28">28sp</dimen>
+    <dimen name="font30">30sp</dimen>
+    <dimen name="font32">32sp</dimen>
+    <dimen name="font34">34sp</dimen>
+    <dimen name="font76">76sp</dimen>
+
+    <dimen name="font_title">@dimen/font18</dimen>
+    <dimen name="font_normal">@dimen/font16</dimen>
+    <dimen name="font_normal14">@dimen/font14</dimen>
+    <dimen name="font_on_button">@dimen/font18</dimen>
+    <dimen name="font_login">@dimen/font18</dimen>
+
+
 
 </resources>
