登录 注册  修改密码  登出  发请求的时候，友好的弹出对话框提示

--- a/weitaixin/src/main/res/layout/ppwin_view.xml
+++ b/weitaixin/src/main/res/layout/ppwin_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/gray3"
     android:layout_height="wrap_content"
+    android:background="@color/gray3"
     android:gravity="center_horizontal">
 
     <LinearLayout
@@ -16,7 +16,7 @@
         <Button
             android:id="@+id/btn_take_photo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:layout_marginTop="20dip"
@@ -28,7 +28,7 @@
         <Button
             android:id="@+id/btn_pick_photo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:layout_marginTop="5dip"
@@ -40,7 +40,7 @@
         <Button
             android:id="@+id/btn_cancel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginBottom="15dip"
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
