--- a/weitaixin/src/main/res/layout/activity_wo_information.xml
+++ b/weitaixin/src/main/res/layout/activity_wo_information.xml
@@ -31,13 +31,13 @@
                 android:background="@color/white0"
                 android:visibility="visible">
 
-                <ImageView
+                <cn.ihealthbaby.weitaixin.view.RoundImageView
                     android:id="@+id/iv_wo_head_icon"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
-                    android:scaleType="fitXY"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/camera_icon" />
 
                 <TextView
