--- a/weitaixin/src/main/res/layout/fragment_wo_info.xml
+++ b/weitaixin/src/main/res/layout/fragment_wo_info.xml
@@ -19,13 +19,13 @@
         android:layout_marginTop="4dp"
         android:background="@color/white0">
 
-        <ImageView
+        <cn.ihealthbaby.weitaixin.view.RoundImageView
             android:id="@+id/iv_wo_head_icon"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             android:src="@drawable/camera_icon" />
 
         <TextView
