--- a/weitaixin/src/main/res/drawable/text_color_selector.xml
+++ b/weitaixin/src/main/res/drawable/text_color_selector.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/font_color" android:state_pressed="true"/>
+    <item android:color="@color/gray2" android:state_enabled="false"/>
     <item android:color="@color/white0"/>
     
 </selector>
