--- a/weitaixin/src/main/res/layout/activity_wo_message.xml
+++ b/weitaixin/src/main/res/layout/activity_wo_message.xml
@@ -2,12 +2,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray5"
     android:orientation="vertical">
 
     <include
         android:id="@+id/head_title_id"
         layout="@layout/layout_title" />
 
+  <!--  <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/pullToRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/head_title_id"
+        android:cacheColorHint="@drawable/text_color_selector"
+        android:divider="#55000000"
+        android:dividerHeight="4px"
+        android:fadingEdge="none"
+        ptr:ptrAnimationStyle="rotate"
+        ptr:ptrDrawable="@drawable/default_ptr_rotate"
+        ptr:ptrHeaderBackground="#383838"
+        ptr:ptrHeaderTextColor="#FFFFFF" />-->
+
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/pullToRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="@color/gray1"
+        android:dividerHeight="4dp"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:smoothScrollbar="true" />
 
 </LinearLayout>
