记录界面   记录列表显示

--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="gray5">#FFF7F7F7</color>
     <color name="gray6">#FFEFEFEF</color>
     <color name="gray7">#FFA9A9A9</color>
+    <color name="gray8">#88A9A9A9</color>
+    <color name="gray9">#FF999999</color>
     <color name="black0">#FF222222</color>
     <color name="black1">#FF000000</color>
     <color name="red0">#FFFE0058</color>
