--- a/weitaixin/src/main/res/layout/fragment_record.xml
+++ b/weitaixin/src/main/res/layout/fragment_record.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray1"
+    android:background="@color/gray8"
     tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
 
     <include
@@ -10,14 +10,191 @@
         layout="@layout/layout_title" />
 
 
-    <LinearLayout
-        android:id="@+id/ll_4"
+    <RelativeLayout
+        android:id="@+id/rl_first_position"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_below="@id/head_title_id"
+        android:layout_marginTop="4dp"
+        android:background="@color/white0"
+        android:paddingTop="10dp">
+
+        <cn.ihealthbaby.weitaixin.view.RoundImageView
+            android:id="@+id/ivWoHeadIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitCenter"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/camera_icon" />
+
+        <TextView
+            android:id="@+id/tvWoHeadName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/ivWoHeadIcon"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/ivWoHeadIcon"
+            android:singleLine="true"
+            android:text="张丽丽"
+            android:textColor="@color/black0"
+            android:textSize="@dimen/font_normal14" />
+
+        <TextView
+            android:id="@+id/tvWoHeadDeliveryTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvWoHeadName"
+            android:layout_toRightOf="@id/ivWoHeadIcon"
+            android:singleLine="true"
+            android:text="24周17天"
+            android:textColor="@color/gray3"
+            android:textSize="@dimen/font_normal14" />
+
+        <LinearLayout
+            android:id="@+id/ll_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/tvWoHeadName"
+            android:layout_marginRight="20dp"
+
+            android:layout_alignParentRight="true"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvUsedCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="32"
+                android:textColor="@color/black0"
+                android:textSize="@dimen/font12" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="监护次数"
+                android:textColor="@color/black0"
+                android:textSize="@dimen/font12" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view_one"
+            android:visibility="gone"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/ll_one"
+            android:layout_alignTop="@id/ll_one"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_toRightOf="@+id/ll_one"
+            android:background="@color/gray3" />
+
+        <LinearLayout
+            android:id="@+id/ll_two"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/tv_wo_head_name"
+            android:layout_toRightOf="@id/view_one"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="432"
+                android:textColor="@color/black0"
+                android:textSize="@dimen/font12" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="最高胎心"
+                android:textColor="@color/black0"
+                android:textSize="@dimen/font12" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view_two"
+            android:visibility="gone"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/ll_one"
+            android:layout_alignTop="@id/ll_one"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@+id/ll_two"
+            android:background="@color/gray3" />
+
+        <LinearLayout
+            android:id="@+id/ll_threes"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/tv_wo_head_name"
+            android:layout_toRightOf="@id/view_two"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="332"
+                android:textColor="@color/black0"
+                android:textSize="@dimen/font12" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="最低胎心"
+                android:textColor="@color/black0"
+                android:textSize="@dimen/font12" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_below="@id/ivWoHeadIcon"
+            android:scaleType="fitCenter"
+            android:src="@drawable/recode_line" />
+
+        <TextView
+            android:id="@+id/tvHospitalName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ivWoHeadIcon"
+            android:layout_alignRight="@id/ll_one"
+            android:singleLine="true"
+            android:text="建档: 北京海淀区医院"
+            android:textColor="@color/gray3"
+            android:textSize="@dimen/font_normal14" />
+
+    </RelativeLayout>
+
+
+
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/pullToRefresh"
+        android:layout_below="@id/rl_first_position"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/head_title_id"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:cacheColorHint="#00000000"
+        android:divider="#00FFFFFF"
+        android:dividerHeight="8dp"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:smoothScrollbar="true" />
 
-    </LinearLayout>
 
 </RelativeLayout>
