--- a/weitaixin/src/main/res/layout/layout_title.xml
+++ b/weitaixin/src/main/res/layout/layout_title.xml
@@ -36,8 +36,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="14dp"
-        android:textColor="@color/font_color"
+        android:textColor="@drawable/text_color_hei_selector"
         android:textSize="@dimen/font_normal"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
 </RelativeLayout>
