--- a/weitaixin/src/main/res/layout/activity_set_system_guardian.xml
+++ b/weitaixin/src/main/res/layout/activity_set_system_guardian.xml
@@ -68,42 +68,48 @@
                 android:button="@drawable/set_system_guardian_selector" />
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="14dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/gray8" />
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/meLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="请选择时间间隔，间隔时间之内不重复报警"
-            android:textColor="@color/gray3"
-            android:textSize="@dimen/font_normal" />
+            android:orientation="vertical">
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/gray8" />
 
-        <ListView
-            android:id="@+id/lvGuardian"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:layout_marginTop="10dp"
-            android:cacheColorHint="#00000000"
-            android:divider="@color/gray2"
-            android:dividerHeight="1dp"
-            android:fadingEdge="none"
-            android:scrollbars="none"
-            android:transcriptMode="normal" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="请选择时间间隔，间隔时间之内不重复报警"
+                android:textColor="@color/gray3"
+                android:textSize="@dimen/font_normal" />
 
+            <ListView
+                android:id="@+id/lvGuardian"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="10dp"
+                android:cacheColorHint="#00000000"
+                android:divider="@color/gray2"
+                android:dividerHeight="1dp"
+                android:fadingEdge="none"
+                android:scrollbars="none"
+                android:transcriptMode="normal" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
