--- a/weitaixin/src/main/res/values/styles.xml
+++ b/weitaixin/src/main/res/values/styles.xml
@@ -34,4 +34,14 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="myDialogTheme2" parent="android:Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
