--- a/weitaixin/src/main/res/layout/dialog_layout_graded.xml
+++ b/weitaixin/src/main/res/layout/dialog_layout_graded.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center" />
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -27,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:text="是是是是是"
                 android:textColor="#000"
