--- a/weitaixin/src/main/res/layout/fragment_wo_info.xml
+++ b/weitaixin/src/main/res/layout/fragment_wo_info.xml
@@ -1,23 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray5"
-    tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/gray5"
+                tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
 
     <RelativeLayout
         android:id="@+id/rl_head_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="14dp"
         android:layout_below="@id/head_title_id"
         android:layout_marginTop="4dp"
-        android:background="@color/white0">
+        android:background="@color/white0"
+        android:paddingBottom="14dp">
 
         <cn.ihealthbaby.weitaixin.view.RoundImageView
             android:id="@+id/iv_wo_head_icon"
@@ -26,7 +26,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/camera_icon" />
+            android:src="@drawable/camera_icon"/>
 
         <TextView
             android:id="@+id/tv_wo_head_name"
@@ -38,7 +38,7 @@
             android:singleLine="true"
             android:text=""
             android:textColor="@color/black0"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,7 +56,7 @@
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/gray3"
-                android:textSize="@dimen/font_normal" />
+                android:textSize="@dimen/font_normal"/>
 
 
             <TextView
@@ -67,7 +67,7 @@
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/gray3"
-                android:textSize="@dimen/font_normal" />
+                android:textSize="@dimen/font_normal"/>
         </LinearLayout>
 
         <ImageView
@@ -78,7 +78,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:scaleType="fitXY"
-            android:src="@drawable/wo_head_arrow_right" />
+            android:src="@drawable/wo_head_arrow_right"/>
 
     </RelativeLayout>
 
@@ -95,7 +95,7 @@
             android:layout_height="24dp"
             android:layout_marginLeft="30dp"
             android:scaleType="fitXY"
-            android:src="@drawable/wo_message" />
+            android:src="@drawable/wo_message"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
             android:singleLine="true"
             android:text="我的消息"
             android:textColor="@drawable/text_color_hei_selector"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <ImageView
             android:layout_width="40dp"
@@ -112,7 +112,7 @@
             android:layout_marginLeft="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/wo_msg_icon"
-            android:visibility="visible" />
+            android:visibility="gone"/>
     </LinearLayout>
 
 
@@ -128,7 +128,7 @@
             android:layout_height="24dp"
             android:layout_marginLeft="30dp"
             android:scaleType="fitXY"
-            android:src="@drawable/wo_gold" />
+            android:src="@drawable/wo_gold"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -137,7 +137,7 @@
             android:singleLine="true"
             android:text="我的金库"
             android:textColor="@drawable/text_color_hei_selector"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <ImageView
             android:layout_width="18dp"
@@ -145,7 +145,7 @@
             android:layout_marginLeft="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/wo_head_arrow_right"
-            android:visibility="invisible" />
+            android:visibility="invisible"/>
     </LinearLayout>
 
 
@@ -161,7 +161,7 @@
             android:layout_height="24dp"
             android:layout_marginLeft="30dp"
             android:scaleType="fitXY"
-            android:src="@drawable/wo_system_set" />
+            android:src="@drawable/wo_system_set"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -170,7 +170,7 @@
             android:singleLine="true"
             android:text="系统设置"
             android:textColor="@drawable/text_color_hei_selector"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <ImageView
             android:layout_width="18dp"
@@ -178,7 +178,7 @@
             android:layout_marginLeft="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/wo_head_arrow_right"
-            android:visibility="invisible" />
+            android:visibility="invisible"/>
     </LinearLayout>
 
 
@@ -194,7 +194,7 @@
             android:layout_height="24dp"
             android:layout_marginLeft="30dp"
             android:scaleType="fitXY"
-            android:src="@drawable/wo_grade" />
+            android:src="@drawable/wo_grade"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -203,7 +203,7 @@
             android:singleLine="true"
             android:text="高危评分"
             android:textColor="@drawable/text_color_hei_selector"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <ImageView
             android:layout_width="18dp"
@@ -211,7 +211,7 @@
             android:layout_marginLeft="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/wo_head_arrow_right"
-            android:visibility="invisible" />
+            android:visibility="invisible"/>
     </LinearLayout>
 
 </RelativeLayout>
