--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/gray5"
+    android:orientation="vertical"
     tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
 
     <include layout="@layout/layout_title" />
@@ -14,26 +14,43 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:visibility="gone"
         android:layout_marginTop="30dp"
         android:background="@drawable/frame_selector"
         android:hint="请输入正确的手机号"
         android:padding="14dp"
         android:singleLine="true"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"
+        android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/et_password_reset"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/frame_selector"
-        android:hint="请输入新密码"
-        android:padding="14dp"
-        android:singleLine="true"
-        android:textSize="@dimen/font_normal" />
+        android:background="@drawable/frame_selector">
+
+        <EditText
+            android:id="@+id/et_password_reset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入新密码"
+            android:layout_marginRight="60dp"
+            android:background="@null"
+            android:padding="14dp"
+            android:singleLine="true"
+            android:textSize="@dimen/font_normal" />
+
+        <ImageView
+            android:id="@+id/ivShowPassword"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="20dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/default_ptr_flip" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,10 +65,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
-            android:numeric="integer"
             android:layout_weight="1"
             android:background="@drawable/frame_selector"
             android:hint="请输入验证码"
+            android:numeric="integer"
             android:padding="14dp"
             android:singleLine="true"
             android:textSize="@dimen/font_normal" />
@@ -65,8 +82,8 @@
             android:gravity="center"
             android:padding="14dp"
             android:singleLine="true"
-            android:textColor="@color/button_login"
             android:text="发送验证码"
+            android:textColor="@color/button_login"
             android:textSize="@dimen/font_normal" />
     </LinearLayout>
 
