--- a/weitaixin/src/main/res/layout/activity_set_system_upload.xml
+++ b/weitaixin/src/main/res/layout/activity_set_system_upload.xml
@@ -1,13 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray5"
-    android:orientation="vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
+              android:background="@color/gray5"
+              android:orientation="vertical">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
 
     <RelativeLayout
@@ -24,16 +25,17 @@
             android:singleLine="true"
             android:text="上传设置"
             android:textColor="@drawable/text_color_hei_selector"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
-        <CheckBox
-            android:id="@+id/cbUpload"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
+        <cn.ihealthbaby.weitaixin.view.SlideSwitch
+            android:id="@+id/slide_switch_upload"
+            slideswitch:isOpen="true"
+            slideswitch:shape="circle"
+            slideswitch:themeColor="@color/green0"
+            android:layout_width="50dip"
+            android:layout_height="30dip"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
-            android:button="@drawable/set_system_guardian_selector" />
+            android:layout_marginRight="30dp"/>
     </RelativeLayout>
 
 
