--- a/weitaixin/src/main/res/values/dimens.xml
+++ b/weitaixin/src/main/res/values/dimens.xml
@@ -27,5 +27,34 @@
     <dimen name="font_login">@dimen/font18</dimen>
 
 
+    <!-- margin,padding dp-->
+    <dimen name="dimen_dp_3">3dp</dimen>
+    <dimen name="dimen_dp_4">4dp</dimen>
+    <dimen name="dimen_dp_5">5dp</dimen>
+    <dimen name="dimen_dp_6">6dp</dimen>
+    <dimen name="dimen_dp_8">8dp</dimen>
+    <dimen name="dimen_dp_10">10dp</dimen>
+    <dimen name="dimen_dp_12">12dp</dimen>
+    <dimen name="dimen_dp_15">15dp</dimen>
+    <dimen name="dimen_dp_17">17dp</dimen>
+    <dimen name="dimen_dp_18">18dp</dimen>
+    <dimen name="dimen_dp_20">20dp</dimen>
+    <dimen name="dimen_dp_24">24dp</dimen>
+    <dimen name="dimen_dp_28">28dp</dimen>
+    <dimen name="dimen_dp_30">30dp</dimen>
+    <dimen name="dimen_dp_32">32dp</dimen>
+    <dimen name="dimen_dp_34">34dp</dimen>
+    <dimen name="dimen_dp_35">35dp</dimen>
+    <dimen name="dimen_dp_40">40dp</dimen>
+    <dimen name="dimen_dp_50">50dp</dimen>
+    <dimen name="dimen_dp_56">56dp</dimen>
+    <dimen name="dimen_dp_60">60dp</dimen>
+    <dimen name="dimen_dp_86">86dp</dimen>
+    <dimen name="dimen_dp_62">62dp</dimen>
+    <dimen name="dimen_dp_80">80dp</dimen>
+    <dimen name="dimen_dp_70">70dp</dimen>
+    <dimen name="dimen_dp_100">100dp</dimen>
+    <dimen name="dimen_dp_120">120dp</dimen>
+
 
 </resources>
