--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="gray7">#FFA9A9A9</color>
     <color name="gray8">#88A9A9A9</color>
     <color name="gray9">#FF999999</color>
+    <color name="gray10">#FFBABABA</color>
     <color name="black0">#FF222222</color>
     <color name="black1">#FF000000</color>
     <color name="red0">#FFFE0058</color>
